photo_mapper/static/css/photo_mapper.css
html {
  height: 100%;
}

.pswp__img--placeholder--blank  {
  opacity: 0 !important;
}

.listItem {
  display: inline-block;
  text-align: center;
  font-weight: bold;
  cursor: pointer;
  cursor: hand;
}

.header {
  background: #606359;
  position: fixed;
  top: 0;
  right: 0;
  z-index: 1;
  width: 100%;
  height: 65px;
}

.mapToggler {
  float: right;
  margin: 10px;
  padding: 10px;
  clear: right;
}

.mapCanvas { 
  height: 100%;
  margin: 5px;
/*  margin-left: 130px;
*/  width: auto;
}

.mapCanvas * {
  background: initial;
}

.logo {
  float: left;
  margin: 5px 5px 5px 10px;  
}

body {
  padding-top: 65px;
  height: 100%;
}
/*@media (max-width: 979px) {
  body {
    padding-top: 0px;
  }
}*/

